--- a/style/main.css
+++ b/style/main.css
@@ -330,22 +330,49 @@ hr {
     font-size: 55px; }
   .tile.tile-e0 .tile-inner {
     background: #eee4da;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+    font-size: 45px;
+  }
+  @media screen and (max-width: 520px) {
+      .tile.tile-e0 .tile-inner {
+          font-size: 25px; } }
+  
   .tile.tile-e1 .tile-inner {
     background: #ede0c8;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
+    font-size: 45px;
+  }
+  @media screen and (max-width: 520px) {
+      .tile.tile-e1 .tile-inner {
+          font-size: 25px; } }
   .tile.tile-e2 .tile-inner {
     color: #f9f6f2;
-    background: #f2b179; }
+    background: #f2b179;
+    font-size: 45px; }
+  @media screen and (max-width: 520px) {
+      .tile.tile-e2 .tile-inner {
+          font-size: 25px; } }
   .tile.tile-e3 .tile-inner {
     color: #f9f6f2;
-    background: #f59563; }
+    background: #f59563;
+    font-size: 45px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-e3 .tile-inner {
+        font-size: 25px; } }  
   .tile.tile-e4 .tile-inner {
     color: #f9f6f2;
-    background: #f67c5f; }
+    background: #f67c5f;
+    font-size: 45px; }
+    @media screen and (max-width: 520px) {
+      .tile.tile-e4 .tile-inner {
+        font-size: 25px; } }  
   .tile.tile-e5 .tile-inner {
     color: #f9f6f2;
-    background: #f65e3b; }
+    background: #f65e3b;
+    font-size: 45px; }
+  @media screen and (max-width: 520px) {
+      .tile.tile-e5 .tile-inner {
+          font-size: 25px; } }
   .tile.tile-e6 .tile-inner {
     color: #f9f6f2;
     background: #edcf72;
